codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2379
expression: "render_snapshot(&pane, area)"
---
• Working... (0s • esc to int…
                              
╭────────────────────────────╮
│ > Ask Codex to do anything │
╰────────────────── browser ─╯
           100% context left
