codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2531
expression: "render_snapshot(&pane, area)"
---
• Working... (0s • esc to interrupt)            
                                                
• Queued follow-up inputs                       
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
╭──────────────────────────────────────────────╮
│ > Ask Codex to do anything                   │
╰──────────────────────────────────── browser ─╯
  ? for shortcuts            100% context left
